@@ -820,6 +820,9 @@ initpycurl(void)
 #if LIBCURL_VERSION_NUM >= MAKE_LIBCURL_VERSION(7, 24, 0)
     insint_c(d, "ACCEPTTIMEOUT_MS", CURLOPT_ACCEPTTIMEOUT_MS);
 #endif
+#if LIBCURL_VERSION_NUM >= MAKE_LIBCURL_VERSION(7, 36, 0)
+    insint_c(d, "EXPECT_100_TIMEOUT_MS", CURLOPT_EXPECT_100_TIMEOUT_MS);
+#endif
 #if LIBCURL_VERSION_NUM >= MAKE_LIBCURL_VERSION(7, 25, 0)
     insint_c(d, "TCP_KEEPALIVE", CURLOPT_TCP_KEEPALIVE);
     insint_c(d, "TCP_KEEPIDLE", CURLOPT_TCP_KEEPIDLE);
